[tool.poetry]
name = "ttrn"
version = "0.1.0"
description = ""
authors = ["Aleksandr Bukhalo"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.11.2"
pyrate-limiter = "^2.6.0"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
Babel = "^2.9.1"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.12"
frozenlist = "^1.3.0"
idna = "^3.3"
multidict = "^6.0.2"
pytz = "^2022.1"
yarl = "^1.7.2"
pydantic = "^1.9.0"


[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
